# sdtm.ai

./: .eslintrc.cjs  .gitignore  BROWSER_PARSER_FIX.md  DASHBOARD_ENHANCEMENT_PROGRESS.md  DATA_VISUALIZER_USAGE.md  FIX_PGRST106.md  QUICK_START_REDESIGN.md  README.md  REDESIGN_SUMMARY.md  SUPABASE_SECURITY.md  fix_schema_exposure.sql  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  requirements.txt  supabase_migration.sql  svelte.config.js  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
api/: data.py  main.py
backend/: check.py  main.py  pyproject.toml  railpack-notused-ENVVAR-instead.json  railpack.json  requirements.txt  start_asgi.py
backend/app/: api.py  data.py  sensor.py
backend/scripts/: pre-start.sh  test.sh
dash/: app.py
dashboard/: package.json  pnpm-lock.yaml
dashboard/src/routes/: +layout.svelte
frontend/: SUPABASE_SETUP.md  package.json  pnpm-lock.yaml  svelte.config.js
frontend/data/: app.duckdb  app.duckdb.wal
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/: types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: SDTM Terminology.xlsx
references/: SDTMIG_v3.4.xlsx
src/: app.d.ts  hooks.server.ts
src/lib/: standards.ts  supabaseClient.ts
src/lib/auth/: supabaseClient.ts
src/lib/compliance/: checker.ts  define.ts  excel.ts  parsers.ts  rules.ts  types.ts
src/lib/db/: duckdb.ts
src/lib/export/: define.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
(+61 files in other folders)
