[project]
name = "s-sdtm-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.1",
    "mangum>=0.19.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.38.0",
]
